// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> with all options matches its snapshot 1`] = `
<TextField
  aria-required={true}
  autoAdjustHeight={false}
  borderless={false}
  className="y-base-text-field y-text-field CLASS y-text-field--with-prefix y-text-field--with-suffix"
  componentRef={[Function]}
  deferredValidationTime={200}
  description="true"
  disabled={true}
  errorMessage="ERROR MESSAGE"
  label="LABEL"
  maxLength={100}
  multiline={false}
  onBeforeChange={[Function]}
  onBlur={[MockFunction onBlur]}
  onChanged={[Function]}
  onFocus={[MockFunction onFocus]}
  onGetErrorMessage={[Function]}
  onMouseEnter={[MockFunction onMouseEnter]}
  onMouseLeave={[MockFunction onMouseLeave]}
  onNotifyValidationResult={[Function]}
  onRenderDescription={[Function]}
  placeholder="PLACEHOLDER"
  prefix="PREFIX"
  resizable={true}
  suffix="SUFFIX"
  underlined={true}
  validateOnFocusIn={false}
  validateOnFocusOut={false}
  validateOnLoad={true}
  value="VALUE"
/>
`;

exports[`<TextField /> with default options matches its snapshot 1`] = `
<TextField
  autoAdjustHeight={false}
  borderless={false}
  className="y-base-text-field y-text-field"
  componentRef={[Function]}
  deferredValidationTime={200}
  errorMessage=""
  multiline={false}
  onBeforeChange={[Function]}
  onChanged={[Function]}
  onGetErrorMessage={[Function]}
  onNotifyValidationResult={[Function]}
  onRenderDescription={[Function]}
  resizable={true}
  underlined={false}
  validateOnFocusIn={false}
  validateOnFocusOut={false}
  validateOnLoad={true}
/>
`;
